# OptiCraft

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: fragment.glsl  vertex.glsl
src/core/: Application.cpp  Application.h  Events.cpp  Events.h  Game.cpp  Game.h  Window.cpp  Window.h
src/entities/: Camera.cpp  Camera.h  Player.cpp  Player.h
src/input/: Input_Call_Backs.h  Input_Manager.cpp  Input_Manager.h
src/rendering/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture_Atlas.cpp  Texture_Atlas.h
src/utils/: Config.h  Hash_Utils.h  Logger.cpp  Logger.h  Math_Helpers.h  Noise.cpp  Noise.h  Texture.cpp  Texture.h
src/world/: Biome_Generator.cpp  Biome_Generator.h  Biome_Types.cpp  Biome_Types.h  Block.cpp  Block.h  Block_Types.cpp  Block_Types.h  Chunk.cpp  Chunk.h  Chunk_Manager.cpp  Chunk_Manager.h  World_Generator.cpp  World_Generator.h
